--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cashbox.appcache">
+<html manifest="m.appcache">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,10 +8,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
 
         <title ng-bind="title"></title>
-
-        <link rel="stylesheet" href="css/main.css" />
     </head>
-    <body style="display:none">
+    <body>
+        <div></div>
 
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
@@ -20,6 +19,7 @@
 
         <ion-nav-view></ion-nav-view>
 
-        <script src="lib/requirejs/require.js" data-main="js/main.js"></script>
+
+        <script src="lib/requirejs/require.js" data-main="js/main.js" async></script>
     </body>
 </html>
