--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
         <title ng-bind="title"></title>
     </head>
     <body>
-        <div></div>
-
         <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
+            <ion-nav-back-button></ion-nav-back-button>
         </ion-nav-bar>
-
         <ion-nav-view></ion-nav-view>
-
 
         <script src="lib/requirejs/require.js" data-main="js/main.js" async></script>
     </body>
