--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+        <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimal-ui" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
-
         <title ng-bind="title"></title>
+        <style>.ng-cloak{display:none}</style>
     </head>
     <body>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button></ion-nav-back-button>
-        </ion-nav-bar>
+        <div ng-if="false" style="text-align:center;margin:100px 0 0;">
+            <img src="img/loading.gif" width="42" height="42"/>
+            <p style="font-size:14px;font-family:monospace;vertical-align:baseline;">Loading...</p>
+        </div>
+
+        <ion-nav-bar class="bar-stable"><ion-nav-back-button></ion-nav-back-button></ion-nav-bar>
         <ion-nav-view></ion-nav-view>
+        <ion-footer-bar class="bar-stable ng-cloak"><a class="button button-clear title"><i class="icon ion-home"></i></a></ion-footer-bar>
 
         <script src="lib/requirejs/require.js" data-main="js/main.js" async></script>
     </body>
