--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <ion-nav-bar class="bar-stable"><ion-nav-back-button></ion-nav-back-button></ion-nav-bar>
         <ion-nav-view></ion-nav-view>
         <ion-footer-bar class="bar-stable ng-cloak">
-            <a ui-sref="home" class="button button-clear title"><i class="icon ion-home"></i></a>
+            <a ui-sref="home" class="button button-clear h1 title icon ion-home"></a>
+            <button ng-click="logout()" class="button button-clear icon ion-log-out"></button>
         </ion-footer-bar>
 
         <script src="lib/requirejs/require.js" data-main="js/main.js" async></script>
