--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <button ng-click="logout()" class="button button-clear icon ion-log-out"></button>
         </ion-footer-bar>
 
-        <script src="lib/requirejs/require.js" data-main="js/main.js" async></script>
+        <script src="lib/requirejs/require.js" data-main="js/min.js" async></script>
     </body>
 </html>
